testData/diagnostics/need_space_after_int.diag.txt
testData/diagnostics/need_space_after_int.nut line = (2) column = (9) : error: malformed number
local f = 333
println([5f][1])
         ^

